Typo fixes + endless wave 100+ restructure to not be near impossible